--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "web-dev-server"
   },
   "dependencies": {
+    "@vaadin/router": "^2.0.0",
     "@zxing/browser": "^0.1.5",
     "lit": "^3.1.4"
   },
