--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "extends": [
       "@open-wc",
       "prettier"
-    ]
+    ],
+    "rules": {
+      "class-methods-use-this": "off"
+    }
   },
   "prettier": {
     "singleQuote": true,
